--- a/assets/gdpr.css
+++ b/assets/gdpr.css
@@ -1,28 +1,24 @@
+:root{
+  --color-primary    : #3F51B5;
+  --color-ash     : #fafafa;
+  --color-truce   : #FFF;
+  --color-abyss   : #000;
+  --distance      : 1rem;
+  --transition    : all 0.3s ease-in-out;
+}
+/* ==================== PROGRESS BAR ==================== */
 progress {
-  /* Positioning */
   position: fixed;
   left: 0;
   top: 0;
-
-  /* Dimensions */
   width: 100%;
   height: .25em;
-
-  /* Reset the apperance */
   -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-
-  /* Get rid of the default border in Firefox/Opera. */
+  appearance: none;
   border: none;
-
-  /* For Firefox/IE10+ */
   background-color: transparent;
-
-  /* For IE10+, color of the progress bar */
   color: var(--color-primary);
 }
-
 progress::-webkit-progress-bar {
   background-color: transparent;
 }
@@ -45,14 +41,40 @@ progress::-webkit-progress-bar {
   height: inherit;
 }
 
-:root{
-  --color-primary    : #562382;
-  --color-ash     : #fafafa;
-  --color-truce   : #FFF;
-  --color-abyss   : #000;
-  --distance      : 1rem;
-  --transition    : all 0.3s ease-in-out;
+
+/* ==================== INDEX ==================== */
+ul li{
+  list-style: none;
 }
+ul.index{
+  margin: 0;
+  padding-left: 0;
+}
+.index li{
+  transition: all 0.3s ease-in-out;
+}
+.index li:not(:last-child){
+  border-bottom: 1px solid var(--color-primary);
+}
+.index li:hover{
+  background-color: var(--color-primary);
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+.index li:hover a{
+  color: var(--color-truce);
+  transition: all 0.3s ease-in-out;
+  padding-left: 1rem;
+}
+
+.index a small{
+  font-size: 0.75rem;
+  letter-spacing: 3px;
+}
+.index a{
+  font-size: 1.25rem;
+}
+/* ==================== BASICS ==================== */
 ::selection{
   background-color: var(--color-primary);
   color: var(--color-truce);
@@ -71,6 +93,7 @@ body{
 .controls{
   border-top: 1px solid var(--color-abyss);
 }
+/* ==================== TEXT ==================== */
 p{
   line-height: 1.75;
 }
@@ -84,9 +107,14 @@ a {
   text-decoration: none;
   color: var(--color-primary);
 }
+/* ==================== HEADER ==================== */
 .logo{
-  border: 3px solid  var(--color-abyss);
+  border: 3px solid var(--color-primary);
+  color: var(--color-primary);
   display: inline-block;
+}
+.menu span{
+  font-size: 1.5rem;
 }
 .backtotop{
   position: fixed;
