--- a/views/partials/footer.html
+++ b/views/partials/footer.html
@@ -1,4 +1,3 @@
-
     <!-- CONTROLS -->
     <section class="controls container">
       <div class="row">
@@ -8,8 +7,8 @@
           </a>
         </div>
         <div class="column inset text-center">
-          <a href="#">
-            <span class="lnr lnr-chevron-menu"></span>
+          <a href="/index.html">
+            <span class="lnr lnr-menu"></span>
           </a>
         </div>
         <div class="column-1 inset text-center">
@@ -25,7 +24,9 @@
   <a href="#rise" class="backtotop round">
     <span class="lnr lnr-chevron-up"></span>
   </a>
-
+  <script>
+  w3IncludeHTML();
+  </script>
   <script type="text/javascript" src="assets/jquery.js"></script>
   <script type="text/javascript" src="assets/gdpr.js"></script>
 
