--- a/views/partials/navigation.html
+++ b/views/partials/navigation.html
@@ -5,7 +5,7 @@
         <h3 class="first logo inset-s">GDPR</h3>
       </div>
       <div class="column-1 center-center menu">
-        <a href="#">
+        <a href="/index.html">
           <span class="lnr lnr-menu"></span>
         </a>
       </div>
