--- a/views/partials/table-of-contents.html
+++ b/views/partials/table-of-contents.html
@@ -2,59 +2,59 @@
     <div class="container content stack-l">
       <ul class="index">
         <li class="inset">
-          <a href="#" class="row center">
+          <a href="views/chapters/intro.html" class="row center">
             <small class="column-3">Hoofdstuk 1</small>
             <span class="column">Inleiding</span>
           </a>
         </li>
         <li class="inset">
-          <a href="#" class="row center">
+          <a href="views/chapters/chapter-1.html" class="row center">
           <small class="column-3">Hoofdstuk 1</small>
           <span class="column">Algemene bepalingen</span>
           </a>
         </li>
         <li class="inset">
-          <a href="#" class="row center">
+          <a href="views/chapters/chapter-2.html" class="row center">
           <small class="column-3">Hoofdstuk 2</small>
           <span class="column">Beginselen</span>
         </a></li>
         <li class="inset">
-          <a href="#" class="row center">
+          <a href="views/chapters/chapter-3.html" class="row center">
           <small class="column-3">Hoofdstuk 3</small>
           <span class="column">Rechten van de betrokkene</span>
         </a></li>
         <li class="inset">
-          <a href="#" class="row center">
+          <a href="views/chapters/chapter-4.html" class="row center">
           <small class="column-3">Hoofdstuk 4</small>
           <span class="column">Verwerkingsverantwoordelijke en verwerker</span>
         </a></li>
         <li class="inset">
-          <a href="#" class="row center">
+          <a href="views/chapters/chapter-5.html" class="row center">
           <small class="column-3">Hoofdstuk 5</small>
           <span class="column">Doorgiften van persoonsgegevens aan derde landen of internationale organisaties</span>
         </a></li>
         <li class="inset">
-          <a href="#" class="row center">
+          <a href="views/chapters/chapter-6.html" class="row center">
           <small class="column-3">Hoofdstuk 6</small>
           <span class="column">Onafhankelijke toezichthoudende autoriteiten</span>
         </a></li>
         <li class="inset">
-          <a href="#" class="row center">
+          <a href="views/chapters/chapter-7.html" class="row center">
           <small class="column-3">Hoofdstuk 7</small>
           <span class="column">Samenwerking en coherentie</span>
         </a></li>
         <li class="inset">
-          <a href="#" class="row center">
+          <a href="views/chapters/chapter-8.html" class="row center">
           <small class="column-3">Hoofdstuk 8</small>
           <span class="column">Beroep, aansprakelijkheid en sancties</span>
         </a></li>
         <li class="inset">
-          <a href="#" class="row center">
+          <a href="views/chapters/chapter-9.html" class="row center">
           <small class="column-3">Hoofdstuk 9</small>
           <span class="column">Bepalingen in verband met specifieke situaties op het gebied van gegevensverwerking</span>
         </a></li>
         <li class="inset">
-          <a href="#" class="row center">
+          <a href="views/chapters/chapter-10.html" class="row center">
           <small class="column-3">Hoofdstuk 10</small>
           <span class="column">Gedelegeerde handelingen en uitvoeringshandelingen</span>
         </a></li>
