--- a/views/partials/navigation.html
+++ b/views/partials/navigation.html
@@ -2,12 +2,12 @@
   <div class="container">
     <div class="row stack-s">
       <div class="column">
-        <a href="/index.html" title="Ga naar huis">
+        <a href="/gdpr/index.html" title="Ga naar huis">
         <h3 class="first logo inset-s">GDPR</h3>
         </a>
       </div>
       <div class="column-1 center-center menu">
-        <a href="/index.html">
+        <a href="/gdpr/index.html">
           <span class="lnr lnr-menu"></span>
         </a>
       </div>
