--- a/assets/gdpr.css
+++ b/assets/gdpr.css
@@ -140,6 +140,16 @@ a:hover.round{
   transform: translateY(-5px);
   box-shadow: 0 14px 26px -12px rgba(0,0,0, 0.42), 0 4px 23px 0px rgba(35, 31, 32, 0.12), 0 8px 10px -5px rgba(0,0,0, 0.2);
 }
+.footer{
+  opacity: 0.3;
+}
+footer small{
+  color: var(--color-abyss);
+}
+.footer__logo{
+  width: 25px;
+  display: block;
+}
 table {
   text-indent: 2rem;
 }
