--- a/views/partials/table-of-contents.html
+++ b/views/partials/table-of-contents.html
@@ -3,7 +3,7 @@
       <ul class="index">
         <li class="inset">
           <a href="views/chapters/intro.html" class="row center">
-            <small class="column-3">Hoofdstuk 1</small>
+            <small class="column-3">Intro</small>
             <span class="column">Inleiding</span>
           </a>
         </li>
